# NetAnalyzer

./: .coveragerc  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
NetAnalyzer/: __init__.py  adv_mat_calc.py  embedding.py  graph2sim.py  integration.py  net_parser.py  net_plotter.py  netanalyzer.py  ranker.py
NetAnalyzer/templates/: cytoscape.txt  el_grapho.txt  sigma.txt
docs/: conf.py  index.rst
src/NetAnalyzer/: __init__.py  adv_mat_calc.py  cli_manager.py  graph2sim.py  integration.py  main_modules.py  net_parser.py  net_plotter.py  netanalyzer.py  performancer.py  ranker.py  seed_parser.py
src/NetAnalyzer/templates/: net_explorer.txt  network.txt
test/: test_integrate.py  test_kernel.py  test_netparser.py  test_network.py  test_ranker.py
test/data/: clusters_network_for_validating.txt  comunities_network_for_validating.txt  cosine_results.txt  counts_results.txt  csi_results.txt  geometric_results.txt  hyi_results.txt  jaccard_results.txt  monopartite_network_for_validating.txt  monopartite_network_matrix  monopartite_network_weights_for_validating.txt  pcc_results.txt  simpson_results.txt  transference_results.txt  tripartite_network_for_validating.txt  tripartite_network_weighted_for_validating.txt
test/data/data_integrate/: asym_kernel2.npy  kernel1.lst
test/data/data_kernel/: adj_mat.npy  ct.npy  el.npy  get_kernels_refs.py  md1.npy  me.npy  rf.npy  rl0_5.npy
test/data/data_ranker/: cross_validation_by_seedgene_results  genes2filter_for_validating  leave_one_out_by_seedgene_results  monopartite_network_weighted_for_validating.txt  ranked_genes  seed_genes_for_validating
test_scripts/: NetAnalyzer_script_tests.sh  der_discovered_clusters.txt  integrate_kernels_tests.sh  label_propagation_discovered_clusters.txt  netanalyzer_script_tests.sh  ranker_script_tests.sh  text2binary_matrix_tests.sh
test_scripts/data_test_scripts/: ranker_top_results_to_test
test_scripts/data_test_scripts/clustering/: clusters_toy.txt  comparing_clusters.txt  der_discovered_clusters.txt  expand_clusters.txt  gdmp2_discovered_clusters.txt  group_metrics.txt  group_metrics_summarized.txt  label_propagation_discovered_clusters.txt
test_scripts/data_test_scripts/integrate_kernels/: create_temporal_big_matrices.py  kernel2.lst
test_scripts/data_test_scripts/netanalyzer/: bipartiteNet  counts_assoc_list  kernel_ct_result.npy  prueba_20  prueba_20.lst
test_scripts/data_test_scripts/netanalyzer/attributes/: node_attributes_summ.txt
test_scripts/data_test_scripts/netanalyzer/clustering/: clusters_toy.txt  comparing_clusters.txt  group_metrics.txt  group_metrics_non_connected.txt
test_scripts/data_test_scripts/netanalyzer/dsl/: filter_dsl  filter_with_count_rowIds
test_scripts/data_test_scripts/text2binary_matrix/: set_diagonal_matrix.npy  test_matrix  test_matrix_bin.npy  test_pairs
test_scripts/output_test_scripts/: ranker_by_seed_string_results_all_candidates  ranker_filter_results_all_candidates
test_scripts/output_test_scripts/clustering/: comparing_clusters.txt  expand_clusters.txt  group_metrics_summarized.txt  label_propagation_discovered_clusters.txt
test_scripts/output_test_scripts/integrate_kernels/: int_mean.npy  int_mean_by_presence.lst  int_mean_by_presence.npy
test_scripts/output_test_scripts/netanalyzer/attributes/: node_attributes_summ.txt
test_scripts/output_test_scripts/netanalyzer/clustering/: comparing_clusters.txt  der_discovered_clusters.txt  rber_pots_discovered_clusters.txt
test_scripts/output_test_scripts/netanalyzer/dsl/: ct.npy  ct_rowIds  filter_with_count.npy
test_scripts/output_test_scripts/netanalyzer/kernels/: ka_normalized.npy  node2vec.npy
test_scripts/output_test_scripts/ranker/: ranker_by_seed_file_results_type_added_all_candidates  ranker_leave_one_out_by_seed_results_all_candidates  ranker_propagate_with_restart_all_candidates
test_scripts/output_test_scripts/text2binary_matrix/: matrix_from_pairs  statistics_from_text2bin  test_matrix
tests/: conftest.py  test_cli_manager.py  test_integrate.py  test_kernel.py  test_network.py  test_ranker.py
tests/data/: clusters_network_for_validating.txt  comunities_network_for_validating.txt  hyi_results.txt  minicluster  monopartite_network_bin_matrix.npy  monopartite_network_with_autorrelations.txt  non_connected_network.txt
tests/data/data_integrate/: asym_kernel1.npy  kernel1.npy  kernel2.npy  negative_kernel1.npy  negative_kernel2.npy
tests/data/data_kernel/: adj_mat.lst  el.npy  node2vec_colIds  vn0_5.npy
tests/data/data_ranker/: bigseed  cross_validation_by_seedgene_results  genes2filter_for_validating  kernel_for_validating  leave_one_out_by_seedgene_results  seed_genes_for_validating_withNotInkernels  seed_weighted_for_validating  tagged_file
tests/demo_examples/: group_nodes  launch_netexplorer.sh  mock_net  target_genes
(+65 files in other folders)
