# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = NetAnalyzer
description = Python package for network analysis, operations and priorization.
author = seoanezonjic
author_email = seoanezonjic@uma.es
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/seoanezonjic/NetAnalyzer/
# Add here related links, for example:
project_urls =
    Documentation = https://github.com/seoanezonjic/NetAnalyzer/
#    Source = https://github.com/pyscaffold/pyscaffold/
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"
    NetworkX
    numpy
    scipy==1.13.1 #Version specified to be compatible with gensim (it allows a version lower than 1.14)
    statsmodels
    graphviz
    mako
    matplotlib
    cdlib
    scikit-learn
    py_semtools
    umap-learn
    py_report_html
    gensim==4.3.3 #Forcing to this version because it solves "triu" function importing error (it allows to be imported both from numpy and scipy)
    pecanpy
    typing_extensions
    py_cmdtabs
    py_exp_calc
    clusim
    nodevectors

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install NetAnalyzer[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = NetAnalyzer.module:function
# For example:
# console_scripts =
#     fibonacci = NetAnalyzer.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
console_scripts =
    netanalyzer = NetAnalyzer.cli_manager:netanalyzer
    integrate_kernels = NetAnalyzer.cli_manager:integrate_kernels 
    randomize_clustering = NetAnalyzer.cli_manager:randomize_clustering 
    randomize_network = NetAnalyzer.cli_manager:randomize_network 
    ranker = NetAnalyzer.cli_manager:ranker 
    text2binary_matrix = NetAnalyzer.cli_manager:text2binary_matrix 
    net_explorer = NetAnalyzer.cli_manager:net_explorer

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
    --cov NetAnalyzer --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.5
package = NetAnalyzer
extensions =
    no_skeleton

